2003-06-08  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/profile_container.cpp:
	* libutil++/string_manip.cpp: gcc 2.91.66 fix

2003-06-08  John Levon  <levon@movementarian.org>

	* libpp/name_storage.h:
	* libpp/name_storage.cpp:
	* libpp/opp_symbol.h:
	* libpp/profile_container.cpp:
	* libpp/symbol_functors.cpp:
	* libutil++/unique_storage.h: don't derive from I()
	at all for id_value, it's not needed. Hide .id and
	provide operator<(), operator==(), operator!=(), and
	set()

2003-06-08  John Levon  <levon@movementarian.org>

	* libutil++/unique_storage.h: make some of
	id_value only visible to unique_storage.

2003-06-08  John Levon  <levon@movementarian.org>

	* libpp/name_storage.h:
	* libutil++/unique_storage.h: move the ID class
	into unique_storage, and make it derive from the
	template parameter, to give simpler type safe support

2003-06-08  John Levon  <levon@movementarian.org>

	* libutil++/Makefile.am:
	* libutil++/unique_storage.h: add new template for
	unique storage of values

	* libpp/name_storage.h:
	* libpp/name_storage.cpp: use it

2003-06-07  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/profile_container.cpp: fix order of file output with opannoate
	--source to be consistent with other tools

2003-06-07  John Levon  <levon@movementarian.org>

	* libpp/profile_container.cpp: fix operator<

2003-06-07  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/profile.h:
	* libpp/profile.cpp: change API to walk through vma with non zero
	samples count rather looking for all vma. This is not very clean, an
	iterator interface will be perhaps a better idea. Measures shows it's
	to do it so for now I apply it.
	* libpp/profile_container.cpp: update according to above change.

2003-06-07  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/profile_container.h:
	* libpp/profile_container.cpp:
	* libpp/symbol_container.h:
	* libpp/symbol_container.cpp: remove dead api
	  find_symbol(string symbol_name)

2003-06-07  Philippe Elie  <phil.el@wanadoo.fr>
